# paper-scroll

./: .gitignore  AGENTS.md  NOTE.md  PLAN.md  README.md  SPEC.md  config.json  index.html  main.py  package-lock.json  package.json  papers.js  plan.md  pyproject.toml  scripts.js  styles.css  test.js  vite.config.ts
.github/workflows/: deploy.yml
backend/: __init__.py  config.py  main.py  schemas.py  services.py  storage.py
data/: aer-2019.json  aer-2020.json  aer-2021.json  aer-2022.json  econometrica-2019.json  econometrica-2020.json  jpe-2019.json  jpe-2020.json  processedPaper_part0.json  processedPaper_part1.json  processedPaper_part10.json  processedPaper_part11.json  processedPaper_part12.json  processedPaper_part13.json  processedPaper_part2.json  processedPaper_part3.json  processedPaper_part4.json  processedPaper_part5.json  processedPaper_part6.json  processedPaper_part7.json  processedPaper_part8.json  processedPaper_part9.json  qje-2019.json  qje-2020.json  restud-2019.json  restud-2020.json
docs/: static_site_requirements.md
frontend/: api_client.py  paper.py  paper_display.py  settings.py  ui.py  zotero.py
scrap/: journals.json  processPapers.js  scrapLinks.js  scrapPapers.js  scrapeUtils.js
src/: App.css  App.tsx  app.py  back.py  index.css  main.py  paper.py  paper_display.py  settings.py  ui.py
src/components/: ExploreView.css  ExploreView.tsx  PaperCard.css  PaperCard.tsx  SettingsPanel.css  SettingsPanel.tsx  Toast.css  Toast.tsx
src/data/: DataContext.tsx  db.ts  store.ts
src/domain/: paper.test.ts  paper.ts
web/: package-lock.json
(+32 files in other folders)
