[project]
name = "paper-scroll"
version = "0.1.0"
description = "Doomscroll Papers"
authors = [
    {name = "Lin-tung Tsai",email = "tsaidondon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "flet (>=0.28.3,<0.29.0)",
    "fastapi (>=0.111.0,<1.0.0)",
    "uvicorn (>=0.30.0,<0.31.0)",
    "pydantic (>=2.6.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
